force-app/main/default/objects/aig_AI_Use_Case_Compliance_Question__c/aig_AI_Use_Case_Compliance_Question__c.object-meta.xml
<CustomObject>
    <label>AI Use Case Compliance Question</label>
    <nameField>
        <displayFormat>CC-{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>AI UC Compliance Question</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Use Case Compliance Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>