force-app/main/default/objects/aig_AI_Use_Case_Compliance_Question__c/fields/aig_AI_Compliance_Checklist_Question__c.field-meta.xml
<CustomField>
    <fullName>aig_AI_Compliance_Checklist_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AI Compliance Checklist Question</label>
    <referenceTo>aig_AI_Compliance_Checklist_Question__c</referenceTo>
    <relationshipName>aig_AI_UC_Compliance_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>