force-app/main/default/objects/aig_AI_Use_Case_Compliance_Question__c/fields/aig_Impact__c.field-meta.xml
<CustomField>
    <fullName>aig_Impact__c</fullName>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Low</fullName>
                <label>🟢 Very Low</label>
            </value>
            <value>
                <fullName>Low</fullName>
                <label>🟡 Low</label>
            </value>
            <value>
                <fullName>Moderate</fullName>
                <label>🟠 Moderate</label>
            </value>
            <value>
                <fullName>High</fullName>
                <label>🔴 High</label>
            </value>
            <value>
                <fullName>Very High</fullName>
                <label>⚫ Very High</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>