force-app/main/default/objects/aig_AI_Use_Case_Compliance_Question__c/fields/aig_Likelihood__c.field-meta.xml
<CustomField>
    <fullName>aig_Likelihood__c</fullName>
    <label>Likelihood</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Unlikely</fullName>
                <label>🟩 Very Unlikely</label>
            </value>
            <value>
                <fullName>Unlikely</fullName>
                <label>🟨 Unlikely</label>
            </value>
            <value>
                <fullName>Possible</fullName>
                <label>🟧 Possible</label>
            </value>
            <value>
                <fullName>Likely</fullName>
                <label>🟥 Likely</label>
            </value>
            <value>
                <fullName>Very Likely</fullName>
                <label>⬛️ Very Likely</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>