force-app/main/default/objects/aig_AI_Use_Case_Compliance_Question__c/fields/aig_Response__c.field-meta.xml
<CustomField>
    <fullName>aig_Response__c</fullName>
    <label>Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>